Make sure link is false since we are wrapping in a link.

--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -11,7 +11,7 @@
 .product-item-link {
 	box-sizing: border-box;
 	display: block;
-	text-decoration: none;
+	text-decoration: none !important;
 
 	&:hover {
 		text-decoration: none;
